# cabe

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  main.cpp  pom.xml
bench/: CMakeLists.txt  buffer_pool_bench.cpp  cabe_engine_bench.cpp  chunk_index_bench.cpp  crc32_bench.cpp  engine_bench.cpp  free_list_bench.cpp  meta_index_bench.cpp
bench/baselines/: README.md  p0_utilities.json  p1.1-benchmark-post-20260420-194904.env.txt  p1.1-benchmark-post-20260420-194904.json  p1.2-benchmark-post-20260421-231601.env.txt  p1.2-benchmark-post-20260421-231601.json  p1_single_thread.json  p2-benchmark-post-20260422-230559.env.txt  p2-benchmark-post-20260422-230559.json  p3-benchmark-post-20260428-090903.env.txt  p3-benchmark-post-20260428-090903.json  p4-m4-post-fixed-20260429-110036.env.txt  p4-m4-post-fixed-20260429-110036.json  p4-m4-pre-fixed-20260428-231401.env.txt  p4-m4-pre-fixed-20260428-231401.json  p4-m5-post-fixed-files-20260514-135857.env.txt  p4-m5-post-fixed-files-20260514-135857.json  p4-m9-post-batch-20260514-202042.env.txt  p4-m9-post-batch-20260514-202042.json  p4-summary.md
bench/baselines/p6/: engine.io_uring.gcc.json  wal_concurrency.io_uring.gcc.json
bench/engine/: engine_bench.cpp
bench/util/: crc32_bench.cpp  hash_bench.cpp
bench/wal/: wal_concurrency_bench.cpp
buffer/: buffer_pool.cpp  buffer_pool.h
common/: CMakeLists.txt  error_code.h  logger.h  structs.h
db/: Cabe.cpp  Cabe.h  cabe.cpp  cabe.h
doc/: p4.5_freelist_design.md  p4_io_uring_design.md
doc/P0/: P0M1_skeleton_design.md  P0M2_schema_design.md  P0M3_errorcode_logger_design.md  P0M4_hash_design.md  P0M5_test_bench_design.md  P0M6_test_scripts_design.md  P0M7_convergence_design.md  README.md
doc/P1/: P1M1_engine_skeleton_design.md  P1M2_data_path_design.md  P1M3_index_freelist_design.md  P1M4_e2e_design.md  P1M5_convergence_design.md  README.md
doc/P2/: P2M1_api_freeze_design.md  P2M2_convergence_design.md  README.md
doc/P3/: P3M1_io_backend_design.md  P3M2_meta_index_design.md  P3M3_engine_switch_design.md  P3M4_convergence_design.md  README.md
doc/P4/: P4M1_io_uring_basic_design.md  P4M2_io_uring_optimize_design.md  P4M3_tsan_deploy_design.md  P4M4_convergence_design.md  README.md  deploy.md
doc/P4.5/: P4.5M1_block_allocator_design.md  P4.5M2_engine_switch_design.md  P4.5M3_convergence_design.md  README.md
doc/P5/: P5M1_super_block_design.md  P5M2_wal_core_design.md  P5M3_wal_levels_design.md  P5M4_snapshot_design.md  P5M5_wal_ring_design.md  P5M6_recovery_design.md  P5M7_convergence_design.md  README.md
doc/P6/: P6M1_commit_group_design.md  P6M2_concurrency_audit_design.md  P6M3_convergence_design.md  README.md
doc/P7/: P7M1_reactor_skeleton_design.md  P7M2_write_path_design.md  P7M3_single_device_mt_design.md  P7M4_multi_device_design.md  P7M5_isolation_convergence_design.md  README.md
engine/: CMakeLists.txt  backend_config.h  buffer_pool.cpp  buffer_pool.h  device_context.h  engine.cpp  engine.h  engine_api.cpp  free_list.cpp  free_list.h  io.cpp  io.h  meta_index.cpp  meta_index.h  options.h  reactor.cpp  reactor.h  status.h  super_block.cpp  super_block.h
include/cabe/: cabe.h  engine.h  options.h  status.h
index/: CMakeLists.txt  meta_index.h
index/hash/: hash_meta_index.cpp  hash_meta_index.h
io/: CMakeLists.txt  buffer_handle.cpp  buffer_handle.h  io_backend.h
io/backends/: io_uring_buffer_handle_impl.h  io_uring_io_backend.cpp  io_uring_io_backend.h  sync_buffer_handle_impl.h  sync_io_backend.cpp  sync_io_backend.h
io/sync/: sync_io_backend.cpp  sync_io_backend.h
io/uring/: io_uring_backend.cpp  io_uring_backend.h
ioutil/: IOManager.h
ioutil/stdio/: STDIO.cpp  STDIO.h
localstore/: std_io.cpp  std_io.h
memory/: Index.h  MEMORY.md  chunk_index.cpp  chunk_index.h  index.cpp  index.h  meta_index.cpp  meta_index.h  project_roadmap.md  user_profile.md
memory/rbtree/: HashIndex.cpp  HashIndex.h
scripts/: mkloop.sh  run-bench.sh  run-coverage.sh  run-tests.sh  setup-dev.sh
slots/: CMakeLists.txt  block_allocator.h
slots/ring/: ring_block_allocator.cpp  ring_block_allocator.h
snapshot/: CMakeLists.txt  snapshot.cpp  snapshot.h  snapshot_format.h
src/main/java/com/datacube/cabe/: CabeApplication.java
src/main/java/com/datacube/cabe/controller/: CabeBaseController.java  CabeMonitorController.java
src/main/java/com/datacube/cabe/entity/: SystemInformation.java
src/main/java/com/datacube/cabe/service/: ICabeMonitorService.java
src/main/java/com/datacube/cabe/service/impl/: CabeMonitorServiceImpl.java
src/main/java/com/datacube/cabe/utils/: LinuxCMD.java  LinuxExecutor.java  ResponseData.java  StatusCodes.java
src/main/resources/: logback-spring.xml
src/test/java/com/datacube/cabe/: CabeApplicationTests.java
storage/: free_list.cpp  free_list.h  storage.cpp  storage.h
test/: CMakeLists.txt
test/buffer/: buffer_pool_test.cpp
test/common/: error_code_test.cpp  structs_test.cpp  test_env.h
test/engine/: buffer_pool_test.cpp  cabe_engine_thread_test.cpp  engine_api_test.cpp  engine_concurrency_test.cpp  engine_multidevice_test.cpp  engine_test.cpp  engine_thread_test.cpp  free_list_test.cpp  io_test.cpp  meta_index_test.cpp  reactor_test.cpp  recovery_test.cpp  status_test.cpp  super_block_test.cpp
test/index/: meta_index_contract_test.cpp
test/io/: io_backend_contract_test.cpp  io_uring_backend_test.cpp  io_uring_skeleton_test.cpp  io_uring_specific_test.cpp  sync_io_backend_skeleton_test.cpp  sync_io_backend_test.cpp
test/memory/: chunk_index_test.cpp  meta_index_test.cpp
test/slots/: block_allocator_contract_test.cpp
test/snapshot/: snapshot_test.cpp
test/storage/: free_list_test.cpp
test/util/: cpu_features_test.cpp  crc32_test.cpp  hash_test.cpp  raw_device_test.cpp  util_test.cpp
test/wal/: wal_concurrency_test.cpp  wal_test.cpp
util/: CMakeLists.txt  UtilMethods.h  cpu_features.cpp  cpu_features.h  crc32.cpp  crc32.h  hash.cpp  hash.h  io_retry.h  raw_device.cpp  raw_device.h  util.h
wal/: CMakeLists.txt  wal.cpp  wal.h  wal_frame.h
